# soko-mushi

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  README.md  build.py  pyproject.toml  requirements.txt  setup_github.bat  test_installation.py
.github/: copilot-instructions.md
assets/: icon.icns
releases/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md
src/: build.py
src/soko_mushi/: __init__.py  main.py
src/soko_mushi/core/: __init__.py  analyzer.py  exporter.py
src/soko_mushi/gui/: __init__.py  main_window.py  stats_panel.py  toolbar.py  tree_view.py
tests/: README.md  test_core.py
